--- a/demo/src/app.html
+++ b/demo/src/app.html
@@ -14,17 +14,17 @@
                     <div class="row">
                         <div class="col-md-6"></div>
                         <div class="col-md-4">
-                            <au-datatable-search placeholder="Search.." input_classes="form-control" on_search_change.bind="search" parameters.bind="parameters">
+                            <au-datatable-search placeholder="Search.." input-classes="form-control" on-search-change.bind="search" parameters.bind="parameters">
                             </au-datatable-search>
                         </div>
                         <div class="col-md-2">
-                            <au-datatable-pagesize page_sizes.bind="[10,25,50,100]" classes="form-control" on_page_size_change.bind="page_size_changed" parameters.bind="parameters">
+                            <au-datatable-pagesize page-sizes.bind="[10,25,50,100]" classes="form-control" on-page-size-change.bind="page_size_changed" parameters.bind="parameters">
                             </au-datatable-pagesize>
                         </div>
                     </div>
                 </div>
-                <table class="table table-bordered table-striped" au-datatable=" starting_data.bind: data; parameters.bind: parameters;">
-                    <thead au-datatable-sort="columns.bind: [1,2,3,4,5,6]; on_sort.bind: sort; parameters.bind: parameters">
+                <table class="table table-bordered table-striped" au-datatable=" starting-data.bind: data; parameters.bind: parameters;">
+                    <thead au-datatable-sort="columns.bind: [1,2,3,4,5,6]; on-sort.bind: sort; parameters.bind: parameters">
                         <tr>
                             <th></th>
                             <th>Fullname</th>
@@ -34,11 +34,11 @@
                             <th>Email</th>
                             <th>Nationality</th>
                         </tr>
-                        <tr as-element="au-datatable-filter" on_filter.bind="filter" filters.bind="table_filters" columns.bind="[1,2,3,4,5,6]" parameters.bind="parameters" containerless>
+                        <tr as-element="au-datatable-filter" on-filter.bind="filter" filters.bind="table_filters" columns.bind="[1,2,3,4,5,6]" parameters.bind="parameters" containerless>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr if.bind="parameters.table_data.length > 0" repeat.for="item of parameters.table_data">
+                        <tr if.bind="parameters.tableData.length > 0" repeat.for="item of parameters.tableData">
                             <td><img src="${item.thumbnail}"></td>
                             <td>${item.name}</td>
                             <td>${item.age}</td>
@@ -54,7 +54,7 @@
                         <au-datatable-info parameters.bind="parameters"></au-datatable-info>
                     </div>
                     <div class="col-md-6">
-                        <au-datatable-pagination class="pull-right" on_next_page.bind="next_page" on_previous_page.bind="previous_page" on_page_change.bind="change_page" parameters.bind="parameters">
+                        <au-datatable-pagination class="pull-right" on-next-page.bind="next_page" on-previous-page.bind="previous_page" on-page-change.bind="change_page" parameters.bind="parameters">
                         </au-datatable-pagination>
                     </div>
                 </div>
